--- a/verify_email/templates/verify_email/email_verification_failed.html
+++ b/verify_email/templates/verify_email/email_verification_failed.html
@@ -24,7 +24,9 @@
             <div class="mt-5">
                 <h1 style="font-family: 'Mulish', sans-serif; text-align: center; color: white; font-size: calc(15px + .5vw);">
                     {{ minor_msg }}
+                    <a href="{% url 'request-new-link-from-email' %}"></a>
                 </h1>
+                
             </div>
         </div>
     </div>
