--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -11,6 +11,7 @@
 <div style="padding-top: 10%;" class="bgImage" >
 <div class = "cont">
     <h3>Welcome {{ user.get_username }}</h3>
+    <a href="{% url 'request-new-link-from-email' %}"></a>
     {% for joke in jokes %}
     <ul><li class = 'joke'><span>{{joke}}</span></li></ul>
     {% endfor %}
