--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -12,6 +12,7 @@
 <div class = "cont">
     <h3>Welcome {{ user.get_username }}</h3>
     <a href="{% url 'request-new-link-from-email' %}"></a>
+    <h1>werghjgfdsssf</h1>
     {% for joke in jokes %}
     <ul><li class = 'joke'><span>{{joke}}</span></li></ul>
     {% endfor %}
