--- a/verify_email/templates/verify_email/email_verification_failed.html
+++ b/verify_email/templates/verify_email/email_verification_failed.html
@@ -26,6 +26,7 @@
                     {{ minor_msg }}
                     
                 </h1>
+                <a href="{% url 'request-new-link-from-email' %}">Resend link</a>
                 
             </div>
             
