--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,13 +1,44 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+	<style>
+		.alert{
+    		display: none;
+		}
+	</style>
+
+</head>
+<body>
+	{% block content %} 
+
+		<h1>Register Here</h1>
+
+		<form method="post">
+			{% csrf_token %}
+			{{ form.as_p }}
+			<br>
+			<input type="submit" name="submit" value="Register" />
+		</form>
+	{% endblock content %}
+	<button>Send Message</button>
+	<div class="alert alert-success alert-dismissable">
+	<!--<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>-->
+		Success! message sent successfully.
+	</div>
+	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+	<script>
+		$(document).ready(function(){
+    $('input').click(function(){
+        $('.alert').show()
+    }) 
+	});
+	</script>	
+</body>
+</html>
 
 
-{% block content %} 
-
-	<h1>Register Here</h1>
-
-	<form method="post">
-		{% csrf_token %}
-		{{ form.as_p }}
-		<br>
-		<input type="submit" name="submit" value="Register" />
-	</form>
-{% endblock content %}
