--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -27,7 +27,7 @@
 	{% endblock content %}
 	<button>Send Message</button>
 	<div class="alert alert-success alert-dismissable">
-	<!--<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>-->
+	<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
 		Success! message sent successfully.
 	</div>
 	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
