--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -25,11 +25,15 @@
 			<input type="submit" name="submit" value="Register" />
 		</form>
 	{% endblock content %}
-	<button>Send Message</button>
-	<div class="alert alert-success alert-dismissable">
-	<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-		Success! message sent successfully.
-	</div>
+    <div class="container">
+        <h2>Dismissal Alert Messages</h2>
+        <button>Send Message</button>
+        <div class="alert alert-success alert-dismissable">
+    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+            Success! message sent successfully.
+        </div>
+
+    </div>
 	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 	<script>
 		$(document).ready(function(){
