--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -5,20 +5,6 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" crossorigin="anonymous">
-	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
-	<style>
-		.alert{
-    		display: none;
-		}
-	</style>
-	<script>
-		$(document).ready(function(){
-	$('input').click(function(){
-		$('.alert').show()
-	}) 
-	});
-	</script>
 
 </head>
 <body>
@@ -26,23 +12,19 @@
 
 		<h1>Register Here</h1>
 
-		<form method="post">
+		<form method="post" onsubmit="myFunction()">
 			{% csrf_token %}
 			{{ form.as_p }}
 			<br>
 			<input type="submit" name="submit" value="Register" />
 		</form>
 	{% endblock content %}
-    <div class="container">
-        <h2>Dismissal Alert Messages</h2>
-        <button>Send Message</button>
-        <div class="alert alert-success alert-dismissable">
-    	<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-            Success! message sent successfully.
-        </div>
 
-    </div>
-	
+	<script>
+		function myFunction() {
+		  alert("Click the link sent to your inbox to verify your account");
+		}
+		</script>
 </body>
 </html>
 
