Some few changes

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -8,6 +8,7 @@
 
 </head>
 <body>
+	
 	{% block content %} 
 
 		<h1>Register Here</h1>
@@ -22,7 +23,7 @@
 
 	<script>
 		function myFunction() {
-		  alert("Click the link sent to your inbox to verify your account");
+		  alert("Click the link sent to your inbox to verify your email");
 		}
 		</script>
 </body>
