--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -9,6 +9,9 @@ body, html{
     margin: 0;
     padding: 0;
 }
+a {
+    color: black;
+}
 .mainpg{
   position: absolute;
   opacity: 0;
@@ -25,6 +28,7 @@ body, html{
     background-size: cover;
     justify-content: center;
     animation: change 10s infinite ease-in-out;
+    align-content: center;
 }
 
 @keyframes change{
@@ -127,7 +131,7 @@ body{
     position:relative;
     z-index:2;
     background:rgba(248, 244, 4, 0.9);
-    opacity: 0.8;
+    opacity: 1;
     font-size:27px;
     color:rgb(15, 15, 15);
     padding:5%;
@@ -274,19 +278,15 @@ body{
   border: 1px solid #ddd; /* Gray border */
   border-radius: 4px;  /* Rounded border */
   padding: 5px; /* Some padding */
-  width: 150px; /* Set a small width */
-  height: 100px;
 }
 
 /* Add a hover effect (blue shadow) */
 .meme:hover {
-  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+  box-shadow: 0 0 2px 1px rgba(18, 18, 19, 0.5);
 }
 /* Three image containers (use 25% for four, and 50% for two, etc) */
 .column {
   float: left;
-  width: 33.33%;
-  padding: 5px;
 }
 
 /* Clear floats after image containers */
