--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -12,6 +12,9 @@ body, html{
 a {
     color: black;
 }
+a:active{
+    background-color: #ddd;
+}
 .mainpg{
   position: absolute;
   opacity: 0;
@@ -114,6 +117,7 @@ body{
 .bg{
     position:relative;
     z-index:1;
+    background-size: cover;
 }
 .bg img{
   display:block;
