--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -117,7 +117,9 @@ body{
 .bg{
     position:relative;
     z-index:1;
-    background-size: cover;
+    background-size: contain;
+    height: 100%;
+    width: 100%;
 }
 .bg img{
   display:block;
