--- a/app/templates/shorts.html
+++ b/app/templates/shorts.html
@@ -11,8 +11,10 @@
       <div class="row">
 
           <div class="column">
-            <a target="_blank" href="{{ short.video.url }}">
-              <video class="meme" src="{{ short.video.url }}" alt=""></video>
+            <a target="_blank" href="{{ short.video }}">
+              <iframe src="{{ short.video }}">
+              </iframe>
+              <video class="meme" src="https://www.youtube.com/watch?v=zCvvLBHH1HU" alt=""></video>
             </a>
           </div>
       </div>
