--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -14,8 +14,19 @@ a {
 }
 
 
-iframe{
-  margin-left: 100%;
+.video {
+  width: 100%;
+  height: 500px;
+  border: 1px solid red;
+  overflow: hidden;
+  position: relative;
+}
+iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .mainpg{
