--- a/app/templates/shorts.html
+++ b/app/templates/shorts.html
@@ -11,8 +11,8 @@
       <div class="container">
         <h2>Responsive Embed</h2>
         <p>Create a responsive video and scale it nicely to the parent element with an 16:9 aspect ratio</p>
-        <div class="embed-responsive embed-responsive-4by3">
-          <iframe class="embed-responsive-item" src="{{ short.video }}"></iframe>
+        <div class="video">
+          <iframe src="{{ short.video }}"></iframe>
         </div>
       </div>
       {% endfor %}
