--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -17,7 +17,6 @@ a {
 .video {
   width: 100%;
   height: 500px;
-  border: 1px solid red;
   overflow: hidden;
   position: relative;
 }
@@ -25,7 +24,7 @@ iframe {
   position: absolute;
   top: 0;
   left: 0;
-  width: auto;
+  width: 70%;
   height: 100%;
 }
 
