Some shorts changes

--- a/app/templates/shorts.html
+++ b/app/templates/shorts.html
@@ -8,7 +8,7 @@
     
 
       {% for short in shorts %}
-      <div class="container">
+      <div>
         <h2>Responsive Embed</h2>
         <p>Create a responsive video and scale it nicely to the parent element with an 16:9 aspect ratio</p>
         <div class="embed-responsive embed-responsive-16by9">
