Some changes to shorts

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -4,7 +4,7 @@
     <h1 class="head-main">CRACK A RIB</h1>
     <h2 class="head-sub-main">Dark humor, Memes, Vines, Funny stories all in one place</h2>
     <h3 class="head-last">You can count on us to lighten up your day</h3>
-    <div class="homebtn"><div id="btnleft"><a href="#joke" >WHITE</a> </div>&nbsp;  <div id="btnright" ><a href=".cont2" >DARK</a></div></div>
+    <div class="homebtn"><div id="btnleft"><button href="#joke" >WHITE</button> </div>&nbsp;  <div id="btnright" ><a href=".cont2" >DARK</a></div></div>
 
 </div>
 </div>
