--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,37 +1,82 @@
-{% load crispy_forms_tags %}
-{% block content %}
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        {% load static %}
+        <link rel="stylesheet" href="{% static '/regstyles.css' %}">
+        <script type="text/javascript" src="{% static 'index.js' %}"></script>
+    </head>
+    <body>
+        <!--[if lt IE 7]>
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+        <div class="page">
+            <div class="container">
+              <div class="left">
+                <div class="login">Login</div>
+                <div class="eula">By logging in you agree to the ridiculously long terms that you didn't bother to read</div>
+              </div>
+              <div class="right">
+                <svg viewBox="0 0 320 300">
+                  <defs>
+                    <linearGradient
+                                    inkscape:collect="always"
+                                    id="linearGradient"
+                                    x1="13"
+                                    y1="193.49992"
+                                    x2="307"
+                                    y2="193.49992"
+                                    gradientUnits="userSpaceOnUse">
+                      <stop
+                            style="stop-color:#ff00ff;"
+                            offset="0"
+                            id="stop876" />
+                      <stop
+                            style="stop-color:#ff0000;"
+                            offset="1"
+                            id="stop878" />
+                    </linearGradient>
+                  </defs>
+                  <path d="m 40,120.00016 239.99984,-3.2e-4 c 0,0 24.99263,0.79932 25.00016,35.00016 0.008,34.20084 -25.00016,35 -25.00016,35 h -239.99984 c 0,-0.0205 -25,4.01348 -25,38.5 0,34.48652 25,38.5 25,38.5 h 215 c 0,0 20,-0.99604 20,-25 0,-24.00396 -20,-25 -20,-25 h -190 c 0,0 -20,1.71033 -20,25 0,24.00396 20,25 20,25 h 168.57143" />
+                </svg>
+                <div class="form">
+                  <form method="post" action="{% url 'login' %}">
+                    {% csrf_token %}
+                    
+                    
+                        <span id="label">{{ form.username.label_tag }}</span>
+                        <span id="input">{{ form.username }}</span>
+                      
+                      
+                        <span id="label">{{ form.password.label_tag }}</span>
+                        <span id="input">{{ form.password }}</span>
+                      
+                    <input type="submit" id="submit" value="Let's Go">
+                    <input type="hidden" name="next" value="{{ next }}">
+                  </form>
+                  {# Assumes you setup the password_reset view in your URLconf #}
+                  <a href="{% url 'register' %}">create account</a>
+                  <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          
+        
+        <script src="" async defer></script>
+    </body>
+</html>
 
-  {% if form.errors %}
-    <p>Your username and password didn't match. Please try again.</p>
-  {% endif %}
-
-  {% if next %}
-    {% if user.is_authenticated %}
-      <p>Your account doesn't have access to this page. To proceed,
-      please login with an account that has access.</p>
-    {% else %}
-      <p>Please login to see this page.</p>
-    {% endif %}
-  {% endif %}
-
-  <form method="post" action="{% url 'login' %}">
-    {% csrf_token %}
-    <table>
-      <tr>
-        <td>{{ form.username.label_tag }}</td>
-        <td>{{ form.username }}</td>
-      </tr>
-      <tr>
-        <td>{{ form.password.label_tag }}</td>
-        <td>{{ form.password }}</td>
-      </tr>
-    </table>
-    <input type="submit" value="login">
-    <input type="hidden" name="next" value="{{ next }}">
-  </form>
-
-  {# Assumes you setup the password_reset view in your URLconf #}
-  <a href="{% url 'register' %}">create account</a>
-  <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
-
-{% endblock %}
+<!--<label for="email">Email</label>
+<input type="email" id="email">
+<label for="password">Password</label>
+<input type="password" id="password">
+<input type="submit" id="submit" value="Let's Go">-->
