--- a/app/static/regstyles.css
+++ b/app/static/regstyles.css
@@ -9,7 +9,7 @@
   background: #2D2F36;
 }
 body {
-  background: white;
+  background: black;
   font-family: 'Inter UI', sans-serif;
   margin: 0;
   padding: 20px;
