--- a/app/static/regstyles.css
+++ b/app/static/regstyles.css
@@ -8,6 +8,11 @@
 ::-moz-selection {
   background: #2D2F36;
 }
+#error{
+  margin-left: 30%;
+  color:red;
+}
+
 body {
   background: linear-gradient(212.38deg, rgba(242, 57, 127, 0.7) 0%, rgba(175, 70, 189, 0.71) 100%),url(images/laugherpro.jpg);
   font-family: 'Inter UI', sans-serif;
