--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -18,11 +18,17 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+    
         <div class="page">
+              <div id="error">
+                {% if form.errors %}
+                <p>Your username and password didn't match. Please try again.</p>
+                {% endif %}
+                </div>
             <div class="container">
               <div class="left">
                 <div class="login">Login</div>
-                <div class="eula">By logging in you agree to the ridiculously long terms that you didn't bother to read</div>
+                <div class="eula">By logging in you agree to the ridiculously long terms</div>
               </div>
               <div class="right">
                 <svg viewBox="0 0 320 300">
@@ -48,6 +54,7 @@
                   <path d="m 40,120.00016 239.99984,-3.2e-4 c 0,0 24.99263,0.79932 25.00016,35.00016 0.008,34.20084 -25.00016,35 -25.00016,35 h -239.99984 c 0,-0.0205 -25,4.01348 -25,38.5 0,34.48652 25,38.5 25,38.5 h 215 c 0,0 20,-0.99604 20,-25 0,-24.00396 -20,-25 -20,-25 h -190 c 0,0 -20,1.71033 -20,25 0,24.00396 20,25 20,25 h 168.57143" />
                 </svg>
                 <div class="form">
+
                   <form method="post" action="{% url 'login' %}">
                     {% csrf_token %}
                     
