Changes to email styles

--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,7 +1,25 @@
 
 
-{% block content %}
-    {% if validlink %}
+{% extends "email_index.html" %}
+
+{%block content%}
+
+<div class="container" 
+    style="
+    height: auto;
+    margin-bottom: 0px; 
+    margin-top: 100px;
+    padding: 100px; 
+    border: 0px solid red;
+    background-color: rgb(255, 255, 255);
+    border-radius: 20px;
+    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+    
+    ">
+    <div class="container mt-5">
+        <h2 style="margin-bottom: 20px;">Reset your password</h2>
+        <hr>
+        {% if validlink %}
         <p>Please enter (and confirm) your new password.</p>
         <form action="" method="post">
         {% csrf_token %}
@@ -24,6 +42,11 @@
         </form>
     {% else %}
         <h1>Password reset failed</h1>
-        <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
+        <p>The password reset link was invalid, possibly because it has already been used &#128549. Please request a new password reset.</p>
+        <p><a href="{% url 'password_reset' %}">New link</a></p>
     {% endif %}
+    
+    </div>
+</div>
+
 {% endblock %}
