--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,5 +1,20 @@
-
+<style>
+  .center { 
+    height: 200px;
+    position: relative;
+    border: 3px solid green; 
+  }
+  
+p {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+  </style>
 
 {% block content %}
-  <p>We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam folder.</p>
+  <p >We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam folder.&#128513</p>
 {% endblock %}
