--- a/verify_email/templates/email_index.html
+++ b/verify_email/templates/email_index.html
@@ -17,7 +17,7 @@
   <style>
     body {
         background-image: linear-gradient(to right, rgb(218, 28, 123) , rgb(0, 110, 253));
-        /*background-image: linear-gradient(to right, rgb(218, 215, 28) , rgba(10, 11, 12, 0.918));*/
+        /*background-image: linear-gradient(to right, rgb(218, 215, 28) , rgba(10, 11, 12, 0.918));
         /* background-image: linear-gradient(rgb(117, 224, 67), rgb(15, 231, 247)); */
 
     }
