--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,6 +1,18 @@
-
+<style>
+  
+div {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+  </style>
 
 {% block content %}
-  <h1>The password has been changed!</h1>
+<div>
+  <p>The password has been changed!&#128525</p>
   <p><a href="{% url 'login' %}">log in again?</a></p>
+</div>
 {% endblock %}
