--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,12 +1,45 @@
-
+{% extends "email_index.html" %}
 
 {% block content %}
-  <form action="" method="post">
+ <!-- <form action="" method="post">
   {% csrf_token %}
   {% if form.email.errors %}
     {{ form.email.errors }}
   {% endif %}
       <p>{{ form.email }}</p>
     <input type="submit" class="btn btn-default btn-lg" value="Reset password">
-  </form>
+  </form> -->
+
+
+<div class="container" 
+    style="
+    height: auto;
+    margin-bottom: 0px; 
+    margin-top: 100px;
+    padding: 100px; 
+    border: 0px solid red;
+    background-color: rgb(255, 255, 255);
+    border-radius: 20px;
+    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+    
+    ">
+    <div class="container mt-5">
+        <h2 style="margin-bottom: 20px;">Input email for password reset</h2>
+        <hr>
+        <form method='POST' >
+            {% csrf_token %}
+            {% if form.email.errors %}
+              {{ form.email.errors }}
+            {% endif %}
+    
+            <fieldset>
+              {{ form.email }}
+            </fieldset>
+    
+            <div style="margin-top: 50px;">
+                <button class="btn btn-outline-info" type="submit">Submit</button>
+            </div>
+        </form>
+    </div>
+</div>
 {% endblock %}
