--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -54,9 +54,9 @@
   </nav>
 {% block content %}{% endblock %}
 <!-- Remove the container if you want to extend the Footer to full width. -->
-<div >
+<div>
   <!-- Footer -->
-  <footer class="text-center text-white" style="background-color: black; bottom: 0%;">
+  <footer id="footer" class="text-center text-white" style="background-color: black;">
     <!-- Grid container -->
     <div class="container">
       <!-- Section: Links -->
@@ -124,28 +124,7 @@
       </section>
       <!-- Section: Text -->
 
-      <!-- Section: Social -->
-      <section class="text-center mb-5">
-        <a href="" class="text-white me-4">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="" class="text-white me-4">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a href="" class="text-white me-4">
-          <i class="fab fa-google"></i>
-        </a>
-        <a href="" class="text-white me-4">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a href="" class="text-white me-4">
-          <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="" class="text-white me-4">
-          <i class="fab fa-github"></i>
-        </a>
-      </section>
-      <!-- Section: Social -->
+     
     </div>
     <!-- Grid container -->
 
@@ -154,9 +133,9 @@
          class="text-center p-3"
          style="background-color: rgba(0, 0, 0, 0.2)"
          >
-      © 2020 Copyright:
+      © 2022 Copyright:
       <a class="text-white" href="https://mdbootstrap.com/"
-         >MDBootstrap.com</a
+         >HUMORER</a
         >
     </div>
     <!-- Copyright -->
