--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -66,7 +66,9 @@ iframe {
 
 
 }
-
+#dark{
+  display: none;
+}
 
 .joke{
     font-family: Florence, cursive;
@@ -144,6 +146,7 @@ body{
     text-align:center;
 }
 .cont{
+    border-radius: 50px;
     position:relative;
     z-index:2;
     background:rgba(248, 244, 4, 0.9);
@@ -161,6 +164,7 @@ body{
   font-size:27px;
   color:rgb(15, 15, 15);
   padding:5%;
+  display: none;
 
 }
 
@@ -310,4 +314,11 @@ body{
   content: "";
   clear: both;
   display: table;
+}
+#footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 60px;   /* Height of the footer */
+  background: #6cf;
 }
