--- a/app/templates/memes.html
+++ b/app/templates/memes.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
     {% block content %}
-    <div id="home2"><h1 class="head-sub-main">A day without memes is full of stress, depression and hypertension which ultimately
+    <div id="home2" class="bgImage"><h1 class="head-sub-main">A day without memes is full of stress, depression and hypertension which ultimately
       leads to photosynthesis
     </h1></div>
 
@@ -20,10 +20,11 @@
       </div>
       {% endfor %}
 
-    
+      </div>
 
     {% else %}
       <p>There are no memes in the database.</p>
-    {% endif %}      
+    {% endif %}
+      </div>      
     {% endblock %}
    
