--- a/app/templates/memes.html
+++ b/app/templates/memes.html
@@ -14,7 +14,7 @@
 
           <div class="column">
             <a target="_blank" href="{{ meme.image.url }}">
-              <img class="meme" src="{{ meme.image.url }}" alt="">
+              <img  class="img-fluid" src="{{ meme.image.url }}" alt="">
             </a>
           </div>
       </div>
