--- a/app/templates/accounts.html
+++ b/app/templates/accounts.html
@@ -52,10 +52,7 @@
                 <legend class="border-bottom mb-4">Edit Profile Information</legend>
                 <div class="form-row">
                     <div class="form-group col-md-6 mb-0">
-                        {{ form.first_name|as_crispy_field }}
-                    </div>
-                    <div class="form-group col-md-6 mb-0">
-                        {{ form.last_name|as_crispy_field }}
+                        {{ form.username|as_crispy_field }}
                     </div>
                 </div> 
                 {{ form.email|as_crispy_field }}
