--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -33,7 +33,7 @@
 </div>
 <div style="padding-top: 10%;" class="bgImage" >
 <div class = "cont">
-    <h4>Welcome {{ user.first_name }}</h4>
+    <h4>Welcome {{ user.username }}</h4>
     {% for joke in jokes %}
     <ul><li class = 'joke'><span>{{joke}}</span></li></ul>
     {% endfor %}
