--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,31 +1,57 @@
+{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	<title>Document</title>
 
 </head>
-<body>
+<body style="background-color: black;">
 	
 	{% block content %} 
 
-		<h1>Register Here</h1>
+	<!--{% if form.errors %}
+		<div class=" alert alert-warning alert-dismissible
+		fade show" role="alert">
+			There was an error with your form...
+			<button type="button" class="btn-close"
+			data-bs-dismiss="alert" aria-label="Close"></button>
+		</div>
+	{% endif %}-->
+	{% if messages %}
+	{% for message in messages %}
+	  <div class="alert alert-dismissible alert-success">
+		<button type="button" class="close" data-dismiss="alert">
+		×
+		</button>
+		<strong class="text-center">{{message}}</strong>
+	  </div>
+   {% endfor %}
+  {% endif %}
 
-		<form method="post" onsubmit="myFunction()">
-			{% csrf_token %}
-			{{ form.as_p }}
-			<br>
-			<input type="submit" name="submit" value="Register" />
-		</form>
+	<Div class="container" >
+		<div class="shadow p-4 mb-5 bg-body rounded" style="background-color: yellow; align-content: center;">
+			<h1 class="text-center">Join the community</h1>
+
+			<form method="post" >
+				{% csrf_token %}
+				{{ form|crispy }}
+				<br>
+				<div class="text-center">
+					<input class="btn btn-secondary" type="submit" name="submit" value="Register">
+				  </div>
+				
+			</form>
+		</div>
+
+	</Div>
 	{% endblock content %}
 
-	<script>
-		function myFunction() {
-		  alert("Click the link sent to your inbox to verify your email");
-		}
-		</script>
 </body>
 </html>
 
