Users can login with email

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -23,9 +23,9 @@
     }
 </script>
 <div id="home2" class="bgImage">
-    <h1 class="head-main">CRACK A RIB</h1>
-    <h2 class="head-sub-main">Dark humor, Memes, Vines, Funny stories all in one place</h2>
-    <h3 class="head-last">You can count on us to lighten up your day &#128516</h3>
+    <h1 class="head-main" style="color: yellow;">CRACK A RIB</h1>
+    <h2 class="head-sub-main" style="color: yellow;">Dark humor, Memes, Vines, Funny stories all in one place</h2>
+    <h3 class="head-last" style="color: yellow;">You can count on us to lighten up your day &#128516</h3>
     <div class="homebtn">  
     <div  ><button type="button" class="btn btn-secondary btn-lg" onclick="myFunction()" id="myBtn">Show Dark</button></div></div>
 
