--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -10,6 +10,9 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
         {% load static %}
         <link rel="stylesheet" href="{% static '/regstyles.css' %}">
         <script type="text/javascript" src="{% static 'index.js' %}"></script>
@@ -30,9 +33,9 @@
                 <div class="login">Login</div>
                 <div class="eula">By logging in you agree to the ridiculously long terms</div>
               </div>
-              <div class="right">
+              <div class="right" class="container">
                 <svg viewBox="0 0 320 300">
-                  <defs>
+                  <!--<defs>
                     <linearGradient
                                     inkscape:collect="always"
                                     id="linearGradient"
@@ -52,21 +55,24 @@
                     </linearGradient>
                   </defs>
                   <path d="m 40,120.00016 239.99984,-3.2e-4 c 0,0 24.99263,0.79932 25.00016,35.00016 0.008,34.20084 -25.00016,35 -25.00016,35 h -239.99984 c 0,-0.0205 -25,4.01348 -25,38.5 0,34.48652 25,38.5 25,38.5 h 215 c 0,0 20,-0.99604 20,-25 0,-24.00396 -20,-25 -20,-25 h -190 c 0,0 -20,1.71033 -20,25 0,24.00396 20,25 20,25 h 168.57143" />
-                </svg>
-                <div class="form">
+                --></svg>
+                <div style="margin-left: 4%; margin-top: 3%;" class="form">
 
                   <form method="post" action="{% url 'login' %}">
                     {% csrf_token %}
                     
                     
-                        <span id="label">{{ form.username.label_tag }}</span>
+                        <span id="label">Username/Email:</span>
                         <span id="input">{{ form.username }}</span>
                       
                       
                         <span id="label">{{ form.password.label_tag }}</span>
                         <span id="input">{{ form.password }}</span>
                       
-                    <input type="submit" id="submit" value="Let's Go">
+                    <!--<input type="submit" id="submit" value="Let's Go">-->
+                    <div class="form-group">
+                      <button class="btn btn-outline-info" type="submit" id="submit" >Let's Go</button>
+                    </div>
                     <input type="hidden" name="next" value="{{ next }}">
                   </form>
                   {# Assumes you setup the password_reset view in your URLconf #}
