--- a/app/templates/memes.html
+++ b/app/templates/memes.html
@@ -14,7 +14,7 @@
 
           <div class="column" id="meme">
             <a target="_blank" href="{{ meme.image.url }}">
-              <img  class="img-fluid"  src="{{ meme.image.url }}" alt="">
+              <img  class="img-responsive"  src="{{ meme.image.url }}" alt="">
             </a>
           </div>
       </div>
