--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,6 +19,7 @@
         <div class="bg">
             <img class="layer2" src= "{% static '/images/laugher1.jpg' %}" alt="" />
             <h1 class="layer1"><span id="dec">HUMOR</span>ER</h1>
+            <!--src= "{% static '/images/laugher1.jpg' %}"-->
         </div>
         <div class="cont">
         {% block content %}
