--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -4,18 +4,10 @@
 
 }
 
-
 a {
     color: black;
 }
 
-
-.video {
-  width: 100%;
-  height: 500px;
-  overflow: hidden;
-  position: relative;
-}
 iframe {
   position: absolute;
   top: 0;
@@ -71,6 +63,7 @@ iframe {
     list-style-type: disc;
 
 }
+
 #dec{
     color: yellow;
     font-family: Florence, cursive;
@@ -118,18 +111,41 @@ iframe {
     right: 0;
   }
 
-*{margin:0;padding:0;}
-body{
-    font-family: 'Slabo 27px', serif;
-}
+
+
 .bg{
     position:relative;
     z-index:1;
+    height: auto;
+    border-color: red;
+    
 }
 .bg img{
   display:block;
   width:100%; 
-  height:auto;
+  height:100%;
+}
+@media (max-width: 767px) {
+  .bg{
+    position:relative;
+    z-index:1;  
+    border-color: red;
+    
+    height:100vh;
+    
+  }
+}
+
+@media (max-width: 767px) {
+  html{
+    height: 100%;
+  }
+
+}
+@media (max-width: 767px) {
+  body{
+    min-height:100%;
+  }
 }
 .bg h1{
     position:absolute;
