--- a/app/templates/shorts.html
+++ b/app/templates/shorts.html
@@ -10,7 +10,7 @@
       {% for short in shorts %}
       <div>
         <div class="embed-responsive embed-responsive-16by9">
-          <iframe class="embed-responsive-item" src="{{ short.video }}" allowfullscreen></iframe>
+          <iframe style="border-radius:20px ;" class="embed-responsive-item" src="{{ short.video }}" allowfullscreen></iframe>
         </div>
       </div>
       {% endfor %}
